<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Last Survivor</string>
    
    <string name="app_first_name">The</string>
    <string name="app_middle_name">Last</string>
    <string name="app_last_name">Survivor</string>
    
    <string name="app_name_for">For</string>
    <string name="app_name_players">Players</string>

    <string name="profile">Profile</string>
    <string name="erro_profile">Nickname is necessary!</string>
    
    <string name="cadastre_player_1">
    	What will be your nickname
    </string>
    
    <string name="cadastre_player_2">
    	    in The Last Survivor?
    </string>
    
    <string name="alteration_palyer_1">
    	 What will be your nickname  		
    </string>
    
    <string name="alteration_palyer_2">
    	 in THE LAST SURVIVOR now?  
    </string>

 	<string name="remove_alert"> Alert!</string>
    
    <string name="removeProfile">
    	 This action will result in loss of all data on The Last Survivor 		
    </string>
    
    <string name="removeProfile_2">
    	This app will finished with the exclusion.
    </string>
    
    <string name="nickname">Nickname</string>
    <string name="lg_twitter">Username or e-mail Twitter</string>
    
    <string name="lg_twitter_01">Username or </string>
    <string name="lg_twitter_02">e-mail Twitter</string>
    
   
    
   
    
    <string name="lista">LIST</string>
    
    
<!-- Simple mode -->
    
     <string name="score">Score: </string> 
	 <string name="life">Life: </string> 
	 <string name="power_up">new Weapon! </string> 
	 
	 <string name="pause_game">Pause game</string> 
	 <string name="time">Time in game: </string> 
	 
	 <string name="list_game">Save games</string>
	 <string name="date_game">DATE:</string>
	 <string name="time_game">TIME:</string>
	 <string name="life_game">LIFE:</string>
	 <string name="point_game">POINTS:</string>
	 <string name="point_team_game">TEAM POINTS:</string>
    

<!-- Jogo Multiplayer -->

	<string name="multiplayer">Multiplayer</string>

	<string name="not_bluetooth">Aparelho não suporta Bluetooth.</string>
	<string name="bluetooth_confirm">Você deve ativar o Bluetooth pra continuar.</string>
	<string name="bluetooth_server">Para iniciar o servidor, seu aparelho deve estar visível.</string>
	
	<string name="no_client">Nenhum sobrevivente encontrado.</string>
	<string name="no_server">Nenhum Servidor encontrado.</string>
	<string name="devices">Devices.</string>
	
	<string name="server_confirm">Escolha um tipo de conexão.</string>
	<string name="show_progress">Aguardando por conexões...</string>
	
	
	<string name="multiplayer_mode_1">
    	Em cada partida, somente um jogador deve escolher SERVIDOR, 
    	enquanto todos os outros devem escolher SOBREVIVENTE.
	</string>
	
	<string name="wait_server">Esperando por sobreviventes.</string>
	<string name="wait_client">Buscando Servidor.</string>
	<string name="wait_init_server">Conectando com o Servidor.</string>
	
	<string name="wait">Carregando!</string>
	<string name="color">Qual sua cor?</string>
	
	<string name="features_mode_1">
    	Oi! Em instantes você deverá escolher 
    </string>
    <string name="features_mode_2">
    	uma cor paa jogar. Quando mais
    </string>
    <string name="features_mode_3">
    	de um jogador escolhem a mesma 
    </string>
    <string name="features_mode_4">
    	 cor os mesmo jogaram em modo 
    </string>
    <string name="features_mode_5">
    	 cooperativo. 
	</string>

<!-- trophies -->    
    
    <string name="trophies">Trophies</string>
        <string name="achieved">Achieved</string>
    
    <string name="t01">The beginning!</string>
    <string name="tObjective01">Finish a single mode.</string>
    
    <string name="t02">Destroyer of stones!</string>
    <string name="tObjective02">Getting 1000 points in a single mode.</string>
    
    <string name="t03">Daredevil!</string>
    <string name="tObjective03">Getting 5000 points in a single mode.</string>
    
    <string name="t04">Like a Boss!</string>
    <string name="tObjective04">Getting 10000 points in a single mode.</string>

	<string name="t05">Survivor!</string>
    <string name="tObjective05">Survive for 3 minutes in a single mode.</string>
	  
	<string name="t06">Action Group!</string>
    <string name="tObjective06">Finish a multiplayer mode.</string>
	  
	<string name="t07">The last Survivor!</string>
    <string name="tObjective07">Win a game on multiplayer mode.</string>
    
    <string name="t08">Partners!</string>
    <string name="tObjective08">Winning a game in mode cooperative.</string>
    
    <string name="t09">I am the Best!</string>
    <string name="tObjective09">Winning a game in mode for himself.</string>
    
    <string name="t10">Trophies Hunter!</string>
    <string name="tObjective10">Getting all trophies in the game.</string>
    
<!-- MESSAGE GAME -->

	<string name="init_game">Start Game!</string>
	<string name="restart_game">Restart Game!</string>
	<string name="destroyed_asteroid">Destroyed asteroid: Score </string>


<!-- RANK -->
	
	<string name="rank">Rank</string>
	<string name="rank_date">Date:</string>
	<string name="rank_score">Score:</string>

<!-- RESULT -->

	<string name="result">Result</string>
	<string name="result_time">Game time:</string>
	<string name="result_score">Score:</string>
	
<!-- TWITTER -->
	<string name="twitter_survived">survived</string>
	<string name="twitter_more">more</string>
	<string name="twitter_seconds">seconds</string>
	<string name="twitter_minutes">minutes</string>
	<string name="twitter_score">on THE LAST SURVIVOR and marked</string>
	<string name="twitter_points">points.</string>
	<string name="twitter_posted">Tweet posted.</string>
	
   
</resources>
