<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:lht="http://schemas.android.com/apk/res/br.com.thelastsurvivor"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
		
		
		<ImageView android:src="@drawable/rect_title_blue_image" 
			android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_width="fill_parent" 
			android:layout_x="-25dp" android:layout_y="0dp">
		</ImageView>
	
	
		<ImageView android:src="@drawable/spacecraft_image_list" 
				android:id="@+id/image_left" android:layout_height="wrap_content" 
				android:layout_width="wrap_content" android:layout_x="19dp" android:layout_y="19dp">
		</ImageView>
		
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/game_saved1" android:text="@string/date_game" 
			android:textSize="14dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="93dp" android:layout_y="10dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/date_game" 
			android:textSize="12dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="155dp" android:layout_y="10dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		
		
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/game_saved2" android:text="@string/time_game" 
			android:textSize="14dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="91dp" android:layout_y="42dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/time_game" 
			android:textSize="12dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="155dp" android:layout_y="42dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		
		
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/game_saved3" android:text="@string/life_game" 
			android:textSize="14dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			 android:layout_x="255dp" android:layout_y="10dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/life_game" 
			android:textSize="12dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="311dp" android:layout_y="10dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
	
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/game_saved4" android:text="@string/point_game" 
			android:textSize="14dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="255dp" android:layout_y="42dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>	
		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/points_game" 
			android:textSize="12dp" android:textColor="@android:color/white"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="330dp" android:layout_y="42dp">
		</br.com.thelastsurvivor.util.FT2FontTextView>
		
	
		
		<TextView android:id="@+id/game_saved_id" android:layout_x="0dp" android:layout_y="0dp"
			android:layout_width="fill_parent" android:layout_height="wrap_content" >
		</TextView>
		
				

</AbsoluteLayout>