<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:lht="http://schemas.android.com/apk/res/br.com.thelastsurvivor"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

	 	<ImageView android:id="@+id/imagebackgraund"
  	 			android:layout_width="fill_parent" 
  	 			android:layout_height="fill_parent"
  	 			android:src="@drawable/rect_black_image"
  	 			android:layout_x="0dp" android:layout_y="0dp">
		</ImageView>
		
		<ImageView android:id="@+id/imagebackgraund"
  	 			android:layout_width="fill_parent" 
  	 			android:layout_height="fill_parent"
  	 			android:src="@drawable/alert_image"
  	 			android:layout_x="57dp" android:layout_y="76dp">
		</ImageView>
	 		
	    
	   <br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/app_name" android:text="@string/remove_alert" 
			android:textSize="25dp"  android:textColor="#4ed3ff"
			android:inputType="textMultiLine"
			android:lines="4" android:gravity="top|left"
			android:scrollHorizontally="false"
			android:maxWidth="200.0dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
		    android:layout_x="254dp" android:layout_y="37dp">
 		</br.com.thelastsurvivor.util.FT2FontTextView>
 		
 		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/app_name" android:text="@string/removeProfile" 
			android:textSize="14dp" android:textColor="@android:color/white"
			android:inputType="textMultiLine"
			android:lines="4" android:gravity="top|left"
			android:scrollHorizontally="false"
			android:maxWidth="280.0dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="188dp" android:layout_y="65dp">
 		</br.com.thelastsurvivor.util.FT2FontTextView>
 		
 		<br.com.thelastsurvivor.util.FT2FontTextView 
			android:id="@+id/app_name" android:text="@string/removeProfile_2" 
			android:textSize="14dp" android:textColor="#FF0000"
			android:inputType="textMultiLine"
			android:lines="4" android:gravity="top|left"
			android:scrollHorizontally="false"
			android:maxWidth="280.0dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
			android:layout_x="188dp" android:layout_y="105dp">
 		</br.com.thelastsurvivor.util.FT2FontTextView>
	    
	    <Button android:layout_height="wrap_content"  
	      		android:layout_width="wrap_content"
	      		android:id="@+id/button_back_game"
	      		android:background="@drawable/button_back_profile_image" 
	      		android:layout_x="207dp" android:layout_y="174dp">
	    </Button>
	    <Button android:layout_height="wrap_content" 
	      		android:layout_width="wrap_content"
	      		android:id="@+id/button_remove"
	      		android:background="@drawable/remove_profile_button_image" 
	      		android:layout_x="304dp" android:layout_y="176dp">
	    </Button>

 </AbsoluteLayout> 