<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:lht="http://schemas.android.com/apk/res/br.com.thelastsurvivor"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<br.com.thelastsurvivor.view.BackgroundView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:id="@+id/surfaceView" /> 
				
				
				<br.com.thelastsurvivor.util.FT2FontTextView 
						android:id="@+id/app_name" android:text="@string/app_first_name" 
						android:textSize="29dp" android:textColor="@android:color/white"
						android:textAppearance="?android:attr/textAppearanceLarge" 
						android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
						android:layout_x="300dp" android:layout_y="15dp">
			 	</br.com.thelastsurvivor.util.FT2FontTextView>
			 	<br.com.thelastsurvivor.util.FT2FontTextView 
						android:id="@+id/app_name" android:text="@string/app_middle_name" 
						android:textSize="29dp" android:textColor="@android:color/white"
						android:textAppearance="?android:attr/textAppearanceLarge" 
						android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
						android:layout_x="380dp" android:layout_y="15dp">
			 	</br.com.thelastsurvivor.util.FT2FontTextView>
			 	<br.com.thelastsurvivor.util.FT2FontTextView 
						android:id="@+id/app_name" android:text="@string/app_last_name" 
						android:textSize="35dp" android:textColor="@android:color/white"
						android:textAppearance="?android:attr/textAppearanceLarge" 
						android:layout_width="fill_parent" android:layout_height="wrap_content" lht:ttf_name="FT2FONT.TTF"
						android:layout_x="250dp" android:layout_y="39dp">
			 	</br.com.thelastsurvivor.util.FT2FontTextView>
			 	
			 		
<HorizontalScrollView android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:scrollbars="none">

     
<FrameLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">


           <AbsoluteLayout 
    			android:orientation="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent">
    		
    			
				
    			
    		
    			<Button android:id="@+id/trophies_1"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="30dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_2"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="130dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_3"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="230dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_4"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="330dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_5"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp"
    	 			android:layout_x="430dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_6"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="530dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_7"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="630dp" android:layout_y="60dp">
				</Button>
				
				<Button android:id="@+id/trophies_8"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="30dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_9"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="130dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_10"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="230dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_11"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="330dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_12"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="430dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_13"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="530dp" android:layout_y="180dp">
				</Button>
				
				<Button android:id="@+id/trophies_14"
    	 			android:layout_width="94dp" 
    	 			android:layout_height="123dp" 
    	 			android:layout_x="630dp" android:layout_y="180dp">
				</Button>
				
				
    		</AbsoluteLayout>
</FrameLayout>

</HorizontalScrollView>

 </AbsoluteLayout>  
